--- a/Compiler/Compiler/Compiler.csproj
+++ b/Compiler/Compiler/Compiler.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Scanner.cs" />
+    <Compile Include="Classes\TinyCompiler.cs" />
+    <Compile Include="Classes\Token.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
